<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginPage">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="363dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/landing"
        android:contentDescription="@string/todo" />

    <androidx.cardview.widget.CardView
        android:id="@+id/media_card_view"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/txtViewLandingPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/acme"
                android:text="Login"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_Email"
                    android:layout_width="240dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textSize="16dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_Password"
                    android:layout_width="240dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="16dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <android.widget.Button
                android:id="@+id/loginButton"
                android:layout_width="240dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/shape"
                android:text="@string/login"
                android:textColor="@color/white" />
            <TextView
                android:id="@+id/forgotPasswordTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="Forgot Password?"
                android:textAllCaps="true"
                android:textColor="#150101"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="46dp"
                tools:layout_editor_absoluteY="90dp" />
            <TextView
                android:id="@+id/backButtonTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="Back"
                android:textAllCaps="true"
                android:textColor="#150101"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="46dp"
                tools:layout_editor_absoluteY="90dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tamano_project_2022"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/media_card_view"
        app:layout_constraintVertical_bias="0.773" />

</androidx.constraintlayout.widget.ConstraintLayout>